--- a/src/index.css
+++ b/src/index.css
@@ -6,8 +6,10 @@
     visibility: hidden;
 }
 .first{
-    background-image: url('https://img.freepik.com/free-photo/modern-industrial-luxury-style-living-room-interior-with-leather-couch-golden-lamp-houseplants_53876-128128.jpg?w=2000');
+    /* background-image: url('./assests/sofa3.jpeg'); */
+    background-color: rgb(141, 35, 0);
     height:100%;
+    border-radius: 20px;
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
