--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -1,258 +1,11 @@
-/* @charset "UTF-8";
-@import url(https://fonts.googleapis.com/css?family=Roboto:500&display=swap);
 .jaswanth {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  font-family: "Roboto", sans-serif;
-  background-color: #01262cd1;
-  overflow: hidden;
-}
-
-.table {
-  display: table;
-  width: 100%;
-  height: 100%;
-}
-
-.table-cell {
-  display: table-cell;
-  vertical-align: middle;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-
-.container {
-  position: relative;
-  width: 45%;
-  margin: 30px auto 0;
-  height: 50%;
-  background-color: #8be2efd1;
-  top: 50%;
-  margin-top: -11%;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .box {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-.container .box:before, .container .box:after {
-  content: " ";
-  position: absolute;
-  left: 152px;
-  top: 50px;
-  background-color: #8be2efd1;
-  transform: rotateX(52deg) rotateY(15deg) rotateZ(-38deg);
-  width: 15%;
-  height: 13%;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .box:after {
-  background-color: #b9f6ffd1;
-  top: -10px;
-  left: 80px;
-  width: 52%;
-  height: 46%;
-}
-.container .container-forms {
-  position: relative;
-}
-.container .btn {
-  cursor: pointer;
-  text-align: center;
-  margin:  auto;
-  width: 100px;
-  color: #fff;
-  background-color: #f75151;
-  opacity: 1;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .btn:hover {
-  opacity: 0.7;
-}
-.container .btn, .container input {
-  padding: 6px 10px;
-}
-.container input {
-  margin: 15px auto 2px;
-  display: block;
-  width: 220px;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.container .container-forms .container-info {
-  text-align: left;
-  font-size: 0;
-}
-.container .container-forms .container-info .info-item {
-  text-align: center;
-  font-size: 16px;
-  width: 48%;
-  height: 320px;
-  display: inline-block;
-  vertical-align: top;
-  color: #fff;
-  opacity: 1;
-  -moz-transition: all 0.3s;
-  -o-transition: all 0.3s;
-  -webkit-transition: all 0.3s;
-  transition: all 0.3s;
-}
-.container .container-forms .container-info .info-item p {
-  font-size: 20px;
-  margin: 20px;
-}
-.container .container-forms .container-info .info-item .btn {
-  background-color: transparent;
-  border: 1px solid #fff;
-}
-.container .container-forms .container-info .info-item .table-cell {
-  padding-right: 35px;
-}
-.container .container-forms .container-info .info-item:nth-child(2) .table-cell {
-  padding-left: 35px;
-  padding-right: 0;
-}
-.container .container-form {
-  overflow: hidden;
-  position: absolute;
-  left: 30px;
-  top: -30px;
-  width: 305px;
-  height: 380px;
-  background-color: #fff;
-  box-shadow: 0 0 15px 0 rgba(0, 0, 0, 0.2);
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .container-form:before {
-  content: "✔";
-  position: absolute;
-  left: 160px;
-  top: -50px;
-  color: #5356ad;
-  font-size: 130px;
-  opacity: 0;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .container-form .btn {
-  position: relative;
-  box-shadow: 0 0 10px 1px #f26868;
-  left:34%;
-  margin-top: 30px;
-}
-.container .form-item {
-  position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  opacity: 1;
-  -moz-transition: all 0.5s;
-  -o-transition: all 0.5s;
-  -webkit-transition: all 0.5s;
-  transition: all 0.5s;
-}
-.container .form-item.sign-up {
-  position: absolute;
-  left: -100%;
-  opacity: 0;
-}
-.container.log-in .box:before {
-  position: absolute;
-  left: 180px;
-  top: 62px;
-  height: 265px;
-}
-.container.log-in .box:after {
-  top: 22px;
-  left: 192px;
-  width: 324px;
-  height: 220px;
-}
-.container.log-in .container-form {
-  left: 265px;
-}
-.container.log-in .container-form .form-item.sign-up {
-  left: 0;
-  opacity: 1;
-}
-.container.log-in .container-form .form-item.log-in {
-  left: -100%;
-  opacity: 0;
-}
-.container.active {
-  width: 260px;
-  height: 140px;
-  margin-top: -70px;
-}
-.container.active .container-form {
-  left: 30px;
-  width: 200px;
-  height: 200px;
-}
-.container.active .container-form:before {
-  content: "✔";
-  position: absolute;
-  left: 51px;
-  top: 5px;
-  color: #5356ad;
-  font-size: 130px;
-  opacity: 1;
-}
-.container.active input, .container.active .btn, .container.active .info-item {
-  display: none;
-  opacity: 0;
-  padding: 0px;
-  margin: 0 auto;
-  height: 0;
-}
-.container.active .form-item {
-  height: 100%;
-}
-.container.active .container-forms .container-info .info-item {
-  height: 0%;
-  opacity: 0;
-}
-
-.rabbit {
-  width: 50px;
-  height: 50px;
-  position: absolute;
-  bottom: 20px;
-  right: 20px;
-  z-index: 3;
-  fill: #fff;
-} */
-
-body {
   font-family: "Montserrat", sans-serif;
   background: #f7edd5;
+  width: 100%;
+  height: 100vh;
+
 }
+
 
 .container {
   max-width: 900px;
@@ -280,7 +33,7 @@ section#formHolder {
 
 .brand {
   padding: 20px;
-  background: url(https://goo.gl/A0ynht);
+  
   background-size: cover;
   background-position: center center;
   color: #fff;
@@ -301,7 +54,7 @@ section#formHolder {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(0, 0, 0, 0.85);
+  background: black;
   z-index: -1;
 }
 .brand a.logo {
@@ -331,7 +84,7 @@ section#formHolder {
   transform: translate(0);
 }
 .brand .heading h2 {
-  font-size: 70px;
+
   font-weight: 700;
   text-transform: uppercase;
   margin-bottom: 0;
@@ -560,7 +313,5 @@ footer p a:hover, footer p a:focus:hover {
     margin-left: 0;
   }
 
-  h2 {
-    font-size: 50px !important;
-  }
+ 
 }
