--- a/src/index.css
+++ b/src/index.css
@@ -21,4 +21,16 @@
     aspect-ratio: auto 600 / 400;
     height: 400px;
 }
+.furniture{
+    background-image:linear-gradient(to bottom,transparent,rgba(0,0,0,0.6)), url("../src/assests/Sofa1.webp") ;
+    width: 200px;
+    aspect-ratio: auto 200 / 400;
+    height: 300px;
+
+}
+.baby{
+    width: 100%;
+    aspect-ratio: auto 100 / 100;
+    height: 100%;
+}
 
