--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+
 .search:focus-within .icon{
     visibility: hidden;
 }
@@ -33,4 +34,8 @@
     aspect-ratio: auto 100 / 100;
     height: 100%;
 }
-
+.btn{
+    box-shadow: 0 0 10px 1000px rgba(0,0,0,0.7);
+    outline: none;
+  
+}
