Lessor details added

--- a/src/auth/Login.css
+++ b/src/auth/Login.css
@@ -1,6 +1,6 @@
 .jaswanth {
   font-family: "Montserrat", sans-serif;
-  background: #f7edd5;
+  background: white;
   width: 100%;
   height: 100vh;
 
