--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,6 @@
     outline: none;
   
 }
+.lessor{
+    background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('./assests/lessor-bg.webp');
+}
