--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,10 @@
 .lessor{
     background-image: linear-gradient(rgba(0,0,0,0.6),rgba(0,0,0,0.6)),url('./assests/lessor-bg.webp');
 }
+.search:focus-within{
+    box-shadow: 0 0 10px 1000px rgba(0,0,0,0.5);
+    outline: none;
+    border-radius: 10px;
+    height: 20vh;
+    overflow-y: auto;
+}
